# OmbleCavalier

./: README.md  pyproject.toml
omblecavalier/engines/: omble_cavalier.py  test_eval.py  uci_random_moves.py
scripts/: build_omble_cavalier.sh  build_random_moves.sh  make_match.sh
tests/: test_puzzles.py
